# rats3

./: .gitignore  CONFIGURABLE_KEYS.md  Cargo.toml  FILE_ICONS.md  HISTORY.md  IMPLEMENTATION_SUMMARY.md  KEY_BINDINGS.md  MODAL_MODES.md  PREVIEW_FEATURE.md  PREVIEW_SCROLLING.md  QUICKSTART.md  README.md  S3_IMPLEMENTATION.md  TESTING.md  UI_IMPROVEMENTS.md  config.example.toml  coverage.sh  test_fuzzy.sh  test_keybindings.toml
examples/: check_toml.rs  list_syntaxes.rs  list_themes.rs  test_toml_syntax.rs
src/: app.rs  clipboard.rs  config.rs  events.rs  fuzzy.rs  lib.rs  main.rs  state.rs  status.rs
src/backend/: local.rs  mod.rs  s3.rs
src/ui/: layout.rs  mod.rs  text_utils.rs
src/ui/widgets/: download_progress.rs  download_selector.rs  file_list.rs  history_list.rs  mod.rs  preview.rs  progress_pane.rs  search_bar.rs  status_bar.rs
